--- a/config.toml
+++ b/config.toml
@@ -108,7 +108,7 @@ removePathAccents = true
   fingerprint = "" # sha512
   gitRepo = "https://github.com/sammcj/smcleod"
   keywords = ["Sam McLeod", "sammcj", "smcleod", "s_mcleod", "DevOps", "Tech", "Engineering"]
-  images = ["/IMG_0565.png", "/profilephoto/apple-touch-icon.png"]
+  images = ["/apple-touch-icon.png", "/profilephoto/apple-touch-icon.png"]
 
   # enablePWA = true
 
@@ -118,8 +118,8 @@ removePathAccents = true
       # Gravatar Email for preferred avatar in home page
       # gravatarEmail = "gravatar@auto.smcleod.net"
       # URL of avatar shown in home page
-      avatarURL = "IMG_0565.png"
-      images = ["/IMG_0565.png", "/profilephoto/apple-touch-icon.png"]
+      avatarURL = "/profilephoto/logo.svg"
+      images = ["/apple-touch-icon.png", "/profilephoto/apple-touch-icon.png"]
       # title = "smcleod.net"
       subtitle = "The personal blog of Sam McLeod"
       # subtitle shown in home page
