--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/archie"]
 	path = themes/archie
 	url = https://github.com/athul/archie.git
+[submodule "themes/papercss-hugo-theme"]
+	path = themes/papercss-hugo-theme
+	url = https://github.com/zwbetz-gh/papercss-hugo-theme.git
