--- a/hugo.yaml
+++ b/hugo.yaml
@@ -100,8 +100,8 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/sammcj/smcleod"
-    Text: "Suggest Changes" # edit text
+    URL: "https://github.com/sammcj/smcleod/content"
+    Text: "Suggest Change" # edit text
     appendFilePath: true # to append file path to Edit link
 
   # for search
