--- a/.github/workflows/typos.yml
+++ b/.github/workflows/typos.yml
@@ -12,9 +12,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
 
       - name: typos-action
-        uses: crate-ci/typos@c16dc8f5b4a7ad6211464ecf136c69c851e8e83c # v1.22.9
+        uses: crate-ci/typos@v1.23.2
+        with:
+          files: |
+            README.md
+            content/**/*.md
