--- a/.github/DISABLED_WORKFLOWS/broken-link-checker.yml
+++ b/.github/DISABLED_WORKFLOWS/broken-link-checker.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         environment: ['production']
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -37,7 +37,7 @@ jobs:
           submodules: recursive
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
           extended: true
