--- a/.github/DISABLED_WORKFLOWS/lint-pr-markdown.yml
+++ b/.github/DISABLED_WORKFLOWS/lint-pr-markdown.yml
@@ -36,7 +36,7 @@ concurrency:
 jobs:
   lint-markdown:
     name: Lint Markdown
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
