--- a/.github/DISABLED_WORKFLOWS/lint-shell.yml
+++ b/.github/DISABLED_WORKFLOWS/lint-shell.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   shellcheck:
     name: lint-shell
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
