--- a/.github/DISABLED_WORKFLOWS/broken-link-checker.yml
+++ b/.github/DISABLED_WORKFLOWS/broken-link-checker.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 'latest'
+          hugo-version: "0.139.2"
           extended: true
 
       - name: Build
