--- a/.github/DISABLED_WORKFLOWS/deploy-beta.yml
+++ b/.github/DISABLED_WORKFLOWS/deploy-beta.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 'latest'
+          hugo-version: "0.139.2"
           extended: true
 
       - name: Build
