post: intro to ai for devs, also fix theme

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -20,6 +20,7 @@ minify:
   minifyOutput: true
 
 params:
+  ignoreLogs: ['warning-partial-superfluous-prefix']
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: smcleod.net
   timeZone: Australia/Melbourne
