--- a/hugo.yaml
+++ b/hugo.yaml
@@ -33,6 +33,7 @@ params:
   DateFormat: "January 2, 2006"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
+  math: true
   sass:
     transpiler: 'dartsass'
 
@@ -203,9 +204,10 @@ markup:
       taskList: true
       typographer: true
 
+
   tableOfContents:
     startLevel: 2
-    endLevel: 4
+    endLevel: 2
 
 sitemap:
   changefreq: weekly
