fix: enable covers

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -107,7 +107,7 @@ params:
 
   cover:
     hidden: true # hide everywhere but not in structured data
-    hiddenInList: true # hide on list pages and home
+    hiddenInList: false # hide on list pages and home
     hiddenInSingle: true # hide on single page
 
   editPost:
