--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,10 +46,15 @@ jobs:
           hugo-version: "0.148.1"
           extended: true
 
-      - name: Setup Python and uvx
+      - name: Setup Python and install uvx
         uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5
         with:
           python-version: '3.13'
+
+      - name: Install uvx
+        run: |
+          python -m pip install --upgrade pip
+          pip install uvx
 
       - name: Generate llms.txt files
         run: |
